añadido los medias queries para mobiles y tablets
el sitio se encuentra optimizado desde el iPhone 3g hasta el iPad con
retina display. Queda pendiente optimizar patrocinadores.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<header>
 		<figure>
 			<img src="img/health2x.png" alt="Logo Startup Weekend Tijuana Health and Care" width"180" height="220"/>
-			<img src="img/swhyc2x.png" alt="Startup Weekend Health and Care" width="420" height="140"/>
+			<img src="img/swhyc2x.png" alt="Startup Weekend Health and Care" class="swText"/>
 			<p>Del 6 al 8 de Junio</p>
 		</figure>
 
@@ -78,9 +78,9 @@
 					<figure class="icon-idea"></figure>
 					<p>Bienvenida a todos los emprendedores.</p>
 
-					<p>La inauguración del evento comienza con una divertida dinámica de networking para la integración de todos los participantes. Después se da la introducción de lo que se vivirá durante los tres días y empiezan los “Pitch Fire” de los emprendedores que tengan ideas y desean juntar un equipo.</p>
+					<p class="p-description">La inauguración del evento comienza con una divertida dinámica de networking para la integración de todos los participantes. Después se da la introducción de lo que se vivirá durante los tres días y empiezan los “Pitch Fire” de los emprendedores que tengan ideas y desean juntar un equipo.</p>
 
-					<p>*Pitch Fire: Explicar tu idea en sólo 1 minuto.</p>
+					<p class="p-description">*Pitch Fire: Explicar tu idea en sólo 1 minuto.</p>
 				</article>
 
 				<article>
@@ -88,9 +88,9 @@
 					<figure class="icon-glass"></figure>
 					<p>Aprendiendo a validar ideas.</p>
 
-					<p>Después de elevarte las energías con un rico desayuno, se te brindaran materiales y herramientas para validar las ideas con clientes potenciales. Luego vienen los mentores a ayudarte con todos tus avances: tu producto y tu modelo de negocios.</p>
+					<p class="p-description">Después de elevarte las energías con un rico desayuno, se te brindaran materiales y herramientas para validar las ideas con clientes potenciales. Luego vienen los mentores a ayudarte con todos tus avances: tu producto y tu modelo de negocios.</p>
 
-					<p>*Modelo de negocios: Documento clave donde demuestras como capturas y generas valor.</p>
+					<p class="p-description">*Modelo de negocios: Documento clave donde demuestras como capturas y generas valor.</p>
 				</article>
 
 				<article>
@@ -98,9 +98,9 @@
 					<figure class="icon-graphic"></figure>
 					<p>Presentaciones finales y premiación.</p>
 
-					<p>Continuando con el trabajo duro y después de haber tomado varias tazas de café, llega el momento de presentar las ideas convertidas en proyectos, donde explican su modelo de negocios a un jurado de expertos en el tema de startups e inversionistas.</p>
+					<p class="p-description">Continuando con el trabajo duro y después de haber tomado varias tazas de café, llega el momento de presentar las ideas convertidas en proyectos, donde explican su modelo de negocios a un jurado de expertos en el tema de startups e inversionistas.</p>
 
-					<p>Al final, se eligen los tres primeros lugares y todos a celebrar conviviendo con los mentores y jueces.</p>
+					<p class="p-description">Al final, se eligen los tres primeros lugares y todos a celebrar conviviendo con los mentores y jueces.</p>
 				</article>
 			</section>
 		</section>
@@ -228,6 +228,37 @@
 				</li>
 			</ul>
 		</div>
+
+		<div id="mobile">
+			<div class="itemExpert">
+				<figure>
+					<img src="img/mentors/marshall.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
+				</figure>
+				<h3>Miguel Marshall</h3>
+				<p>Director regional de Angel Ventures México</p>
+			</div>
+			<div class="itemExpert">
+				<figure>
+					<img src="img/mentors/marshall.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
+				</figure>
+				<h3>Miguel Marshall</h3>
+				<p>Director regional de Angel Ventures México</p>
+			</div>
+			<div class="itemExpert">
+				<figure>
+					<img src="img/mentors/marshall.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
+				</figure>
+				<h3>Miguel Marshall</h3>
+				<p>Director regional de Angel Ventures México</p>
+			</div>
+			<div class="itemExpert">
+				<figure>
+					<img src="img/mentors/marshall.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
+				</figure>
+				<h3>Miguel Marshall</h3>
+				<p>Director regional de Angel Ventures México</p>
+			</div>
+		</div>
 	</section>
 
 	<section id="map">
@@ -270,8 +301,11 @@
 
 	<section id="tickets">
 		<h2>Adquiere tus boletos</h2>
+
+		<a href="http://swtijuana5.eventbrite.com" target="_blank" class="btnEventbrite"></a>
+
 		<div class="eventbrite">
-			<div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.com/tickets-external?eid=11391053949&ref=etckt" frameborder="0" height="682" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Registro de eventos online</a><span style="color:#ddd;"> para </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="https://swtijuana5.eventbrite.com/?ref=etckt">Startup Weekend Tijuana: Health </a> <span style="color:#ddd;">ofrecido por</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
+			<div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.com/tickets-external?eid=11391053949&ref=etckt" frameborder="0" height="760" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Registro de eventos online</a><span style="color:#ddd;"> para </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="https://swtijuana5.eventbrite.com/?ref=etckt">Startup Weekend Tijuana: Health </a> <span style="color:#ddd;">ofrecido por</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
 		</div>
 	</section>
 
@@ -283,31 +317,31 @@
 			<p>#SWTJ</p>
 		</figure>
 		
-		<figure class="patrocinio">
+		<figure id="sponsors">
 			<h2>Patrocinadores</h2>
 			<img src="img/logos/sponsors.png" alt="Patrocinadores"/>
 		</figure>
 	</footer>
 
 	<script type="text/javascript">
-    $(function () {
-        $('a[href*=#]:not([href=#])').click(function () {
-            if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') && location.hostname == this.hostname) {
-                var target = $(this.hash);
-                target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-                if (target.length) {
-                    $('html,body').animate({
-                        scrollTop: target.offset().top
-                    }, 1400);
-                    return false;
-                }
-            }
-        });
-        $(document).ready(function () {
-            $(".bar").sticky({ topSpacing: 0 });
-            $(".slideExperts").flicker();
-        });
-    });
+	    $(function () {
+	        $('a[href*=#]:not([href=#])').click(function () {
+	            if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') && location.hostname == this.hostname) {
+	                var target = $(this.hash);
+	                target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+	                if (target.length) {
+	                    $('html,body').animate({
+	                        scrollTop: target.offset().top
+	                    }, 1400);
+	                    return false;
+	                }
+	            }
+	        });
+	        $(document).ready(function () {
+	            $(".bar").sticky({ topSpacing: 0 });
+	            $(".slideExperts").flicker();
+	        });
+	    });
     </script>
 </body>
 </html>
