Terminado sitio Version 1.5.14
Agregados todos los medias queries y arreglado el video e imagen
responsive...

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<title>Startup Weekend Tijuana: Health and Care</title>
 	<meta name="description" content="Startup Weekend Tijuana es la oportunidad que muchos emprendedores esperan. Tienes solo 54 horas para hacer realidad tu idea y convencer al jurado que tu empresa es la mejor.">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-
+	
 	<link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 	<link href="css/styles.css" rel="stylesheet" type="text/css" />
 	<link href="css/flickerplate.css" rel="stylesheet" type="text/css" />
-
+	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="js/modernizr.js" type="text/javascript"></script>
 	<script src="js/jquery-sticky.js" type="text/javascript"></script>
@@ -39,7 +39,7 @@
 		</article>
 
 		<article class="video">
-			<!-- <iframe width="640" height="360" src="//www.youtube.com/embed/cPScUWwP6ec?rel=0" frameborder="0" allowfullscreen></iframe> -->
+			<iframe width="640" height="360" src="//www.youtube.com/embed/cPScUWwP6ec?rel=0" frameborder="0" allowfullscreen></iframe>
 		</article>
 	</section>
 	
@@ -109,11 +109,6 @@
 			<h2>Ideas <span>Health</span> & <span>Care</span></h2>
 			<ul>
 				<li>
-					<figure class="circle icon-pharmacy"></figure>
-					<h3>Farmacéutico</h3>
-					<p>Ideas que puedan mejorar la presentación o colocación de productos medicos.</p>
-				</li>
-				<li>
 					<figure class="circle icon-heart"></figure>
 					<h3>Actividad Física</h3>
 					<p>Ideas que ayuden a mejorar la condición física y cardiaca mediante ejercicios.</p>
@@ -122,6 +117,11 @@
 					<figure class="circle icon-apple"></figure>
 					<h3>Alimentación</h3>
 					<p>Ideas para comunicar y controlar los alimentos que se consumen dia a dia.</p>
+				</li>
+				<li>
+					<figure class="circle icon-pharmacy"></figure>
+					<h3>Farmacéutico</h3>
+					<p>Ideas que puedan mejorar la presentación o colocación de productos medicos.</p>
 				</li>
 				<li>
 					<figure class="circle icon-stethoscope"></figure>
@@ -139,6 +139,36 @@
 				<li>
 					<div class="itemExpert">
 						<figure>
+							<img src="img/mentors/ernesto.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
+						</figure>
+						<h3>Ernesto Milá</h3>
+						<p>Fundador y CEO de</br>iDoo Group</p>
+					</div>
+					<div class="itemExpert">
+						<figure>
+							<img src="img/mentors/gustavo.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
+						</figure>
+						<h3>Gustavo Rubio</h3>
+						<p>Fundador y CEO de</br>42 Ideas</p>
+					</div>
+					<div class="itemExpert">
+						<figure>
+							<img src="img/mentors/horman.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
+						</figure>
+						<h3>Horman Millan</h3>
+						<p>Consultor en</br>Innovación y Tecnología</p>
+					</div>
+					<div class="itemExpert">
+						<figure>
+							<img src="img/mentors/marshall.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
+						</figure>
+						<h3>Miguel Marshall</h3>
+						<p>Director regional de</br>Angel Ventures México</p>
+					</div>
+				</li>
+				<!-- <li>
+					<div class="itemExpert">
+						<figure>
 							<img src="img/mentors/marshall.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
 						</figure>
 						<h3>Miguel Marshall</h3>
@@ -195,68 +225,38 @@
 						<h3>Miguel Marshall</h3>
 						<p>Director regional de Angel Ventures México</p>
 					</div>
-				</li>
-				<li>
-					<div class="itemExpert">
-						<figure>
-							<img src="img/mentors/marshall.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
-						</figure>
-						<h3>Miguel Marshall</h3>
-						<p>Director regional de Angel Ventures México</p>
-					</div>
-					<div class="itemExpert">
-						<figure>
-							<img src="img/mentors/marshall.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
-						</figure>
-						<h3>Miguel Marshall</h3>
-						<p>Director regional de Angel Ventures México</p>
-					</div>
-					<div class="itemExpert">
-						<figure>
-							<img src="img/mentors/marshall.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
-						</figure>
-						<h3>Miguel Marshall</h3>
-						<p>Director regional de Angel Ventures México</p>
-					</div>
-					<div class="itemExpert">
-						<figure>
-							<img src="img/mentors/marshall.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
-						</figure>
-						<h3>Miguel Marshall</h3>
-						<p>Director regional de Angel Ventures México</p>
-					</div>
-				</li>
+				</li> -->
 			</ul>
 		</div>
 
 		<div id="mobile">
 			<div class="itemExpert">
 				<figure>
-					<img src="img/mentors/marshall.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
+					<img src="img/mentors/ernesto.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
 				</figure>
-				<h3>Miguel Marshall</h3>
-				<p>Director regional de Angel Ventures México</p>
+				<h3>Ernesto Milá</h3>
+				<p>Fundador y CEO de</br>iDoo Group</p>
+			</div>
+			<div class="itemExpert">
+				<figure>
+					<img src="img/mentors/gustavo.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
+				</figure>
+				<h3>Gustavo Rubio</h3>
+				<p>Fundador y CEO de</br>42 Ideas</p>
+			</div>
+			<div class="itemExpert">
+				<figure>
+					<img src="img/mentors/horman.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
+				</figure>
+				<h3>Horman Millan</h3>
+				<p>Consultor en</br>Innovación y Tecnología</p>
 			</div>
 			<div class="itemExpert">
 				<figure>
 					<img src="img/mentors/marshall.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
 				</figure>
 				<h3>Miguel Marshall</h3>
-				<p>Director regional de Angel Ventures México</p>
-			</div>
-			<div class="itemExpert">
-				<figure>
-					<img src="img/mentors/marshall.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
-				</figure>
-				<h3>Miguel Marshall</h3>
-				<p>Director regional de Angel Ventures México</p>
-			</div>
-			<div class="itemExpert">
-				<figure>
-					<img src="img/mentors/marshall.jpg" alt="Miguel Marshall" width="200" height="200" class="circle"/>
-				</figure>
-				<h3>Miguel Marshall</h3>
-				<p>Director regional de Angel Ventures México</p>
+				<p>Director regional de</br>Angel Ventures México</p>
 			</div>
 		</div>
 	</section>
@@ -270,33 +270,40 @@
 		<ul>
 			<li>
 				<figure>
-					<img src="img/organizers/happy.jpg" alt="Jozué Morales" width="200" height="200" class="circle"/>
+					<img src="img/organizers/jozue.jpg" alt="Jozué Morales" width="200" height="200" class="circle"/>
 				</figure>
 				<h3>Jozué Morales</h3>
-				<p>Co-Fundador de Zench Consulting</p>
+				<p>Co-Fundador de</br>Zench Consulting</p>
 			</li>
 			<li>
 				<figure>
-					<img src="img/organizers/happy.jpg" alt="Emmanuel Gonzáles" width="200" height="200" class="circle"/>
+					<img src="img/organizers/emmanuel.jpg" alt="Emmanuel Gonzáles" width="200" height="200" class="circle"/>
 				</figure>
 				<h3>Emmanuel Gonzáles</h3>
-				<p>Fundador de Tecnologías Inteligentes</p>
+				<p>Fundador de</br>Tecnologías Inteligentes</p>
 			</li>
 			<li>
 				<figure>
-					<img src="img/organizers/happy.jpg" alt="Deyanira Santos" width="200" height="200" class="circle"/>
+					<img src="img/organizers/dey.jpg" alt="Deyanira Santos" width="200" height="200" class="circle"/>
 				</figure>
 				<h3>Deyanira Santos</h3>
-				<p>Gerente de ventas en SAGE Oasis of Hope</p>
+				<p>Gerente de ventas en</br>SAGE Oasis of Hope</p>
 			</li>
 			<li>
 				<figure>
-					<img src="img/organizers/happy.jpg" alt="Julio Resendíz" width="200" height="200" class="circle"/>
+					<img src="img/organizers/julio.jpg" alt="Julio Resendíz" width="200" height="200" class="circle"/>
 				</figure>
 				<h3>Julio Resendíz</h3>
-				<p>Fundador de Open DATA Tijuana</p>
+				<p>Fundador de</br>Open DATA Tijuana</p>
 			</li>
 		</ul>
+	</section>
+	
+	<section id="sponsors">
+		<figure>
+			<h2>Patrocinadores</h2>
+			<img src="img/logos/sponsors.png" alt="patrocinadores"/>
+		</figure>
 	</section>
 
 	<section id="tickets">
@@ -305,7 +312,7 @@
 		<a href="http://swtijuana5.eventbrite.com" target="_blank" class="btnEventbrite"></a>
 
 		<div class="eventbrite">
-			<div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.com/tickets-external?eid=11391053949&ref=etckt" frameborder="0" height="760" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Registro de eventos online</a><span style="color:#ddd;"> para </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="https://swtijuana5.eventbrite.com/?ref=etckt">Startup Weekend Tijuana: Health </a> <span style="color:#ddd;">ofrecido por</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
+			<div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.com/tickets-external?eid=11391053949&ref=etckt" frameborder="0" height="700" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Registro de eventos online</a><span style="color:#ddd;"> para </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="https://swtijuana5.eventbrite.com/?ref=etckt">Startup Weekend Tijuana: Health </a> <span style="color:#ddd;">ofrecido por</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
 		</div>
 	</section>
 
@@ -315,11 +322,6 @@
 			<a href="http://facebook.com/swtijuana" target="_blank" class="circle icon-facebook"></a>
 			<a href="http://twitter.com/StartupTijuana" target="_blank" class="circle icon-twitter"></a>
 			<p>#SWTJ</p>
-		</figure>
-		
-		<figure id="sponsors">
-			<h2>Patrocinadores</h2>
-			<img src="img/logos/sponsors.png" alt="Patrocinadores"/>
 		</figure>
 	</footer>
 
